fix: Driodown menus off-screen on mobile screens
Resolves #356

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 
 @import '../../vendor/filament/filament/resources/css/theme.css';
 
+@import "./globals/global.scss";
+
 @import "./components/tables.scss";
 @import "./components/widgets.css";
 @import "./components/footer.css";
