feat: Add modal action group for simpler action selection on large action lists

--- a/resources/css/globals/global.scss
+++ b/resources/css/globals/global.scss
@@ -7,3 +7,11 @@
         z-index: 9999 !important;
     }
 }
+
+.modal-action-group {
+    .fi-sc-action {
+        .fi-ac-btn-action {
+            width: 100% !important;
+        }
+    }
+}
